2019-1/231/users/4212/executions/1810_2570.log
== TEST (2019-06-05 14:31:01) 
-- CODE:
from numpy import * 
from math import *

vet = array(eval(input("Informe numeros reais: ")))
n = size(vet)
m = sum(vet)/n
d2 = 1

for i in range(n:
	d2 = d2 * (vet[i] - m)
	
d1 = (d2/n-1)**(1/n)

print(round(d1,3))

-- ERROR:
File "XXXX", line 9
    for i in range(n:
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:31:09) 
-- CODE:
from numpy import * 
from math import *

vet = array(eval(input("Informe numeros reais: ")))
n = size(vet)
m = sum(vet)/n
d2 = 1

for i in range(n):
	d2 = d2 * (vet[i] - m)
	
d1 = (d2/n-1)**(1/n)

print(round(d1,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:32:14) 
-- CODE:
from numpy import * 
from math import *

vet = array(eval(input("Informe numeros reais: ")))
n = size(vet)
m = sum(vet)/n
d2 = 1

for i in range(n):
	d2 = abs(d2 * (vet[i] - m))
	
d1 = d2**(1/n)

print(round(d1,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:32:29) 
-- CODE:
from numpy import * 
from math import *

vet = array(eval(input("Informe numeros reais: ")))
n = size(vet)
m = sum(vet)/n
d2 = 1

for i in range(n):
	d2 = abs(d2 * (vet[i] - m))
	
d1 = d2**(1/n)

print(round(d1,3))

-- EXECUTION TIME:
1.18966
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
